# Solar_Ants

./: acceleration.py  token.txt
DataCapture/: CMakeLists.txt
DataCapture/src/: CNN-Odom.ckpt  DataCapture.py  cnn-odom-rnn.ckpt  cnn-odom.txt  model.py
beginner_tutorials/: CMakeLists.txt
big_mongo/: CMakeLists.txt  package.xml  setup.py
big_mongo/config/: Solar_config.yaml  topicConfig.yaml
big_mongo/launch/: mongoLaunch.launch
big_mongo/msg/: layer_msg.msg  next_goal.msg  order_info.msg
big_mongo/scripts/: DataReader.py  DataReader2.py  ROS_msgParser.py  Solar_setting.json  mongoBug.py  mongoBug_MQTT.py  mongoServer.py  (+3 more)
communication_develop/: CMakeLists.txt  package.xml
data_capture/: CMakeLists.txt  package.xml
end_2_end/: CMakeLists.txt  package.xml
imu_launch/: CMakeLists.txt  package.xml
imu_tool/: .travis.yml  Dockerfile-kinetic  README.md
joy_control/: CMakeLists.txt  package.xml
ml_learningcontrol/: CMakeLists.txt  package.xml
robot_cv/: CMakeLists.txt  package.xml  setup.py
rover_control/: CMakeLists.txt  package.xml
serial_imu/: CMakeLists.txt  package.xml
solar_ant/: .package.xml.swp  CMakeLists.txt  package.xml  solar_ant_startup.sh
willy_v2/: CMakeLists.txt  package.xml
willy_v2/include/: willy_base.h  willy_encoder.h  willy_fault_detection.h  willy_motor.h
willy_v2/launch/: willy_amcl.launch  willy_motor.launch  willy_wakeup.launch
willy_v2/msg/: Float_Header.msg
willy_v2/src/: willy_base_main.cpp  willy_base_v2.cpp  willy_encoder.cpp  willy_fault_detection.cpp  willy_motor_left.cpp  willy_motor_right.cpp
(+129 files in other folders)
